# RoboNerva

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bot.py  config.example.py  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  isort.yml  ruff.yml
cogs/: __dev__.py  __error__.py  __eval__.py  automod.py  autopost.py  general.py  help.py  inactivity.py  market.py  network.py  verification.py
scripts/: populate_historical_data_api.py  populate_historical_data_csv.py  populate_historical_data_manual.py
utils/: buttons.py  cd.py  modals.py  paginators.py  tools.py
