[tool.poetry]
name = "RoboNerva"
version = "1.0.0"
description = "Community manager bot for the Nerva (XNV) cryptocurrency."
license = "GPL-3.0"
authors = ["Sayan Bhattacharyya <sn1f3rt@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
discord-ext-menus-views = {git = "https://github.com/FumeStop/discord-ext-menus-views"}
discord-py = {extras = ["speed"], version = "^2.4.0"}
dnspython = "^2.6.1"
motor = "^3.6.0"
python-telegram-bot = "^21.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[tool.poetry.group.scripts]
optional = true

[tool.poetry.group.scripts.dependencies]
aiocsv = "^1.3.2"
aiofiles = "^24.1.0"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
