[project]
name = "RoboNerva"
version = "1.0.0"
description = "Community manager bot for the Nerva Community."
license = "GPL-3.0"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "discord-ext-menus",
    "discord-ext-menus-views",
    "discord-py>=2.4.0",
    "dnspython>=2.7.0",
    "motor>=3.6.0",
    "python-telegram-bot>=21.6",
]

[project.optional-dependencies]
scripts = [
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0.post0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
]

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
discord-ext-menus-views = { git = "https://github.com/FumeStop/discord-ext-menus-views" }

[tool.ruff]
line-length = 85
target-version = "py313"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"config" = ["config"]
