[project]
name = "RoboNerva"
version = "1.0.0"
description = "Community manager bot for the Nerva Community."
license = "GPL-3.0"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "discord-ext-menus",
    "discord-ext-menus-views",
    "discord-py[speed,voice]>=2.4.0",
    "dnspython>=2.6.1",
    "motor>=3.6.0",
    "python-dateutil>=2.9.0.post0",
    "python-telegram-bot>=21.6",
    "validators>=0.34.0",
]

[project.optional-dependencies]
scripts = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
discord-ext-menus-views = { git = "https://github.com/FumeStop/discord-ext-menus-views" }

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"config" = ["config"]
